[gd_scene load_steps=17 format=3 uid="uid://bw3u08kavh4c3"]

[ext_resource type="PackedScene" uid="uid://bfqiik6sj0uxm" path="res://Scenes/player.tscn" id="1_gtyw5"]
[ext_resource type="Script" uid="uid://3i8ebuu6ib2h" path="res://Scripts/OutpostZero.gd" id="1_qljh0"]
[ext_resource type="Texture2D" uid="uid://d05t0nrgj35gx" path="res://assets/sprites/Avulsos/world_tileset.png" id="2_6rkfg"]
[ext_resource type="Script" uid="uid://cyacmwsm4vsa3" path="res://Scripts/map_camera.gd" id="3_0kjhj"]
[ext_resource type="PackedScene" uid="uid://0qjr82hbx7kf" path="res://Scenes/spawner.tscn" id="4_qljh0"]
[ext_resource type="Script" uid="uid://dc2td61cpfsq7" path="res://Scripts/restore_button.gd" id="5_5yvy5"]
[ext_resource type="Script" uid="uid://c3xwpselad5jh" path="res://Scripts/health_bar_player.gd" id="5_gjb8k"]
[ext_resource type="PackedScene" uid="uid://kjiib22xqmnh" path="res://Scenes/slime.tscn" id="5_ld1ho"]
[ext_resource type="Script" uid="uid://b2xosdkl7rrya" path="res://Scripts/HUD.gd" id="6_gh8l2"]
[ext_resource type="Script" uid="uid://bhqwysmp71npg" path="res://Scripts/pause_menu.gd" id="6_immmw"]
[ext_resource type="Script" uid="uid://bfxr2qv3dgwvg" path="res://Scripts/tower_selection_ui.gd" id="7_wbs02"]
[ext_resource type="Texture2D" uid="uid://drqrurq7u7vbv" path="res://assets/sprites/CENARIO_OZ V1.1/Cenario1.png" id="9_5yvy5"]
[ext_resource type="PackedScene" uid="uid://b68iv11s7a68k" path="res://Scenes/slimeVoador.tscn" id="12_wedwb"]
[ext_resource type="PackedScene" uid="uid://rgi8atjl0u8v" path="res://Scenes/turrets/TurretPosition.tscn" id="17_mh4e7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y846i"]
texture = ExtResource("2_6rkfg")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
5:3/0 = 0
5:4/0 = 0
5:5/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_qljh0"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_y846i")

[node name="OutpostZero" type="Node2D"]
script = ExtResource("1_qljh0")
spawner_path = NodePath("Spawner")

[node name="player" parent="." instance=ExtResource("1_gtyw5")]
z_index = 10
position = Vector2(-3, -119)
scale = Vector2(1.5, 1.5)

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_qljh0")
format = 2
layer_0/name = "back"
layer_1/name = "mid"
layer_1/tile_data = PackedInt32Array(-65539, 0, 0, -65540, 0, 0, -65541, 0, 0, -65542, 0, 0, -65543, 0, 0, -65544, 0, 0, -65545, 0, 0, -65546, 0, 0, -65547, 0, 0, -65548, 0, 0, -65549, 0, 0, -65550, 0, 0, -65551, 0, 0, -65552, 0, 0, -65553, 0, 0, -65554, 0, 0, -65555, 0, 0, -65556, 0, 0, -65557, 0, 0, -65558, 0, 0, -65559, 0, 0, -65560, 0, 0, -65561, 0, 0, -65562, 0, 0, -65563, 0, 0, -65564, 0, 0, -65565, 0, 0, -65566, 0, 0, -65567, 0, 0, -65568, 0, 0, -65569, 0, 0, -65570, 0, 0, -65571, 0, 0, -65572, 0, 0, -65573, 0, 0, -65574, 0, 0, -65575, 0, 0, -65576, 0, 0, -65577, 0, 0, -65578, 0, 0, -65579, 0, 0, -65580, 0, 0, -65581, 0, 0, -65582, 0, 0, -65583, 0, 0, -65584, 0, 0, -65585, 0, 0, -65586, 0, 0, -65587, 0, 0, -65588, 0, 0, -65589, 0, 0, -65590, 0, 0, -65591, 0, 0, -65592, 0, 0, -65593, 0, 0, -65594, 0, 0, -65595, 0, 0, -65596, 0, 0, -65597, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131044, 0, 0, -131043, 0, 0, -131042, 0, 0, -131041, 0, 0, -131040, 0, 0, -131039, 0, 0, -131038, 0, 0, -131037, 0, 0, -131036, 0, 0, -131035, 0, 0, -131034, 0, 0, -131033, 0, 0, -131032, 0, 0, -131031, 0, 0, -131030, 0, 0, -131029, 0, 0, -131028, 0, 0, -131027, 0, 0, -131026, 0, 0, -131025, 0, 0, -131024, 0, 0, -131023, 0, 0, -131022, 0, 0, -131021, 0, 0, -131020, 0, 0, -131019, 0, 0, -131018, 0, 0)

[node name="WaveTimer" type="Timer" parent="."]
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("6_gh8l2")

[node name="Control" type="Control" parent="HUD"]
z_index = -1
custom_minimum_size = Vector2(1100, 30)
layout_mode = 3
anchor_top = 0.008
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.184
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/Control"]
z_index = -1
custom_minimum_size = Vector2(0, 5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -10.0
offset_right = -12.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Control/MarginContainer"]
z_index = -1
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="TopLeftContainer" type="VBoxContainer" parent="HUD/Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Spacer" type="Control" parent="HUD/Control/MarginContainer/HBoxContainer/TopLeftContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="WaveLabel" type="Label" parent="HUD/Control/MarginContainer/HBoxContainer/TopLeftContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Onda: 0"

[node name="Spacer2" type="Control" parent="HUD/Control/MarginContainer/HBoxContainer/TopLeftContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyCountLabel" type="Label" parent="HUD/Control/MarginContainer/HBoxContainer/TopLeftContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Inimigos: 0"

[node name="TopRightContainer" type="VBoxContainer" parent="HUD/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Spacer" type="Control" parent="HUD/Control/MarginContainer/TopRightContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="WaveProgressBar" type="ProgressBar" parent="HUD/Control/MarginContainer/TopRightContainer"]
layout_mode = 2

[node name="ProgressBarLabel" type="Label" parent="HUD/Control/MarginContainer/TopRightContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="BottomRightContainer" type="HBoxContainer" parent="HUD/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="RestoreButton" type="Button" parent="HUD/Control/MarginContainer/BottomRightContainer"]
layout_mode = 2
script = ExtResource("5_5yvy5")

[node name="CoinCountLabel" type="Label" parent="HUD/Control/MarginContainer/BottomRightContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Moedas:"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="HealthBarLabel" type="Label" parent="HUD/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Barra de vida"
horizontal_alignment = 2

[node name="HealthBar" type="ProgressBar" parent="HUD/Control/MarginContainer/VBoxContainer"]
z_index = 5
custom_minimum_size = Vector2(-1000, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
value = 50.0
script = ExtResource("5_gjb8k")

[node name="PauseMenu" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_immmw")

[node name="ColorRect" type="ColorRect" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -23.5
offset_right = 20.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="JogoPause" type="Label" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Pause Menu"

[node name="Spacer" type="Control" parent="HUD/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="ContinueButton" type="Button" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Continuar
"

[node name="RestartButton" type="Button" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Reiniciar
"

[node name="QuitButton" type="Button" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Menu Inicial
"

[node name="TowerSelectionUi" type="Control" parent="HUD" groups=["ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 769.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_wbs02")

[node name="Panel" type="Panel" parent="HUD/TowerSelectionUi"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -381.0
grow_horizontal = 0
grow_vertical = 2

[node name="TowerList" type="VBoxContainer" parent="HUD/TowerSelectionUi/Panel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -374.0
grow_horizontal = 0
grow_vertical = 2

[node name="Cenário" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(53, -400)
scale = Vector2(0.235, 0.235)
texture = ExtResource("9_5yvy5")

[node name="MapCamera" type="Camera2D" parent="Cenário"]
position = Vector2(-12.7659, 1506.38)
scale = Vector2(4.25532, 4.25532)
zoom = Vector2(0.753, 0.753)
limit_left = -713
limit_top = -830
limit_right = 819
limit_bottom = 25
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("3_0kjhj")

[node name="Spawner" parent="." instance=ExtResource("4_qljh0")]
z_index = 1
position = Vector2(-1.01555, -50.015)
enemy_scene = ExtResource("5_ld1ho")
flying_enemy_scene = ExtResource("12_wedwb")

[node name="LeftSpawn" type="Marker2D" parent="Spawner"]
position = Vector2(-624.984, -89.985)

[node name="RightSpawn" type="Marker2D" parent="Spawner"]
position = Vector2(735.016, -87.985)

[node name="AirSpawn" type="Marker2D" parent="Spawner"]
position = Vector2(625.016, -242.985)

[node name="EnemySpawnTimer" type="Timer" parent="Spawner"]
wait_time = 0.5

[node name="Turrets" type="Node2D" parent="."]
z_index = 10

[node name="Turrets" parent="Turrets" instance=ExtResource("17_mh4e7")]
visible = false
z_index = 10
position = Vector2(-219, -226)
scale = Vector2(0.8, 0.8)

[node name="Turrets2" parent="Turrets" instance=ExtResource("17_mh4e7")]
visible = false
z_index = 10
position = Vector2(236, -229)
scale = Vector2(0.7, 0.7)

[node name="Turrets3" parent="Turrets" instance=ExtResource("17_mh4e7")]
visible = false
z_index = 10
position = Vector2(-219, -151)
scale = Vector2(0.7, 0.7)

[node name="Turrets4" parent="Turrets" instance=ExtResource("17_mh4e7")]
visible = false
z_index = 10
position = Vector2(237, -155)
scale = Vector2(0.7, 0.7)

[node name="Turrets5" parent="Turrets" instance=ExtResource("17_mh4e7")]
z_index = 10
position = Vector2(-36.2307, -101.45)
scale = Vector2(0.7, 0.7)

[node name="Turrets6" parent="Turrets" instance=ExtResource("17_mh4e7")]
z_index = 10
position = Vector2(30, -103)
scale = Vector2(0.7, 0.7)

[connection signal="timeout" from="Spawner/EnemySpawnTimer" to="Spawner" method="_on_enemy_spawn_timer_timeout"]
